--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ section .title{
     position: fixed;
     width: 100%;
     z-index: 999;
-    padding: 40px 0;
+    padding: 25px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
+    background-color: #c2d6d4;
 }
 .navbar .max-width{
     display: flex;
@@ -337,6 +338,7 @@ contact h2{
     margin-bottom: 0%;
     margin-top: 0%;
     text-align: center;
+    padding-bottom: 1%;
 }
 #footertext{
     font-family: 'Ubuntu', sans-serif;
